fix multiple layout issues

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -33,9 +33,9 @@
 
 
   // Replace with corresponding template values
-  @container-width: 960px;
+  @container-width: 1200px;
 
-  @spacing__first--desktop: 40px;
+  @spacing__first--desktop: 0px;
   @spacing__first--tablet:  30px;
   @spacing__first--mobile:  20px;
 
@@ -50,7 +50,6 @@
     margin-left: auto;
     margin-right: auto;
     max-width: @container-width;
-    width: 90%;
   }
 
 
@@ -102,5 +101,11 @@
          margin-bottom: 0;
     }
   }
+
+  .main > .contain {
+    width: 100%;
+  }
+
+
 
 } // End of #migrated-site
